kafka publish topic

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,14 +3,14 @@ spring:
     bootstrap-servers:
       - localhost:9092,localhost:9093,localhost:9094
     consumer:
-      group-id: kafka-group
+      group-id: push-group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.JsonDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
     producer:
       retries: 0
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.JsonDeserializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     listener:
       ack-mode: manual
 
