--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 version: '3.8'
 services:
   zookeeper-1:
+    platform: linux/amd64
     image: confluentinc/cp-zookeeper:5.5.1
     ports:
       - '32181:32181'
@@ -10,6 +11,7 @@ services:
 
 
   kafka-1:
+    platform: linux/amd64
     image: confluentinc/cp-kafka:5.5.1
     ports:
       - '9092:9092'
@@ -26,6 +28,7 @@ services:
 
 
   kafka-2:
+    platform: linux/amd64
     image: confluentinc/cp-kafka:5.5.1
     ports:
       - '9093:9093'
@@ -42,6 +45,7 @@ services:
 
 
   kafka-3:
+    platform: linux/amd64
     image: confluentinc/cp-kafka:5.5.1
     ports:
       - '9094:9094'
@@ -73,6 +77,7 @@ services:
       - zookeeper-1
 
   mysql:
+    platform: linux/amd64
     image: mysql:5.7
     container_name: mysql
     ports:
