--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,4 +41,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    database: mysql
     show-sql: true
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
